// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`identity session endpoints GET /identity/session rejects a signed-out token 1`] = `
{
  "data": {
    "message": "Unauthorized",
    "statusCode": 401,
  },
  "status": 401,
}
`;

exports[`identity session endpoints GET /identity/session returns the active session 1`] = `
{
  "data": {
    "session": {
      "activeOrganizationId": null,
      "createdAt": "<iso-datetime>",
      "expiresAt": "<iso-datetime>",
      "id": "<uuid>",
      "ipAddress": "",
      "token": "<secret>",
      "updatedAt": "<iso-datetime>",
      "userAgent": "",
      "userId": "<uuid>",
    },
    "user": {
      "createdAt": "<iso-datetime>",
      "email": "<secret>",
      "emailVerified": true,
      "id": "<uuid>",
      "image": null,
      "name": "E2E session",
      "stripeCustomerId": null,
      "updatedAt": "<iso-datetime>",
    },
  },
  "status": 200,
}
`;

exports[`identity session endpoints GET /identity/token returns a JWT 1`] = `
{
  "data": {
    "token": "<jwt>",
  },
  "status": 200,
}
`;

exports[`identity session endpoints PATCH /identity/profile updates the caller profile 1`] = `
{
  "data": {
    "status": true,
  },
  "status": 200,
}
`;

exports[`identity session endpoints POST /identity/change-password rotates the password 1`] = `
{
  "data": {
    "token": null,
    "user": {
      "createdAt": "<iso-datetime>",
      "email": "<secret>",
      "emailVerified": true,
      "id": "<uuid>",
      "image": null,
      "name": "E2E Updated Name",
      "stripeCustomerId": null,
      "updatedAt": "<iso-datetime>",
    },
  },
  "status": 200,
}
`;

exports[`identity session endpoints POST /identity/sign-out ends the session 1`] = `
{
  "data": {
    "success": true,
  },
  "status": 200,
}
`;
